# agent

./: .gitignore  .travis.yml  Bucket.toml  Cargo.toml  Makefile  README.md  Vagrantfile  build.rs  installer.sh  package.sh
resources/: agent.json  agent.json.tpl
resources/init/: debian  freebsd  redhat  systemd
src/: command.rs  config.rs  error.rs  file.rs  lib.rs  main.rs  msg.rs
src/api/: command.rs  directory.rs  file.rs  mod.rs  package.rs  service.rs  telemetry.rs
src/config/: agent.rs  mod.rs
src/handler/: api.rs  file.rs  mod.rs
