[package]

name = "intecture-agent"
version = "0.2.1"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "Agent component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "agent"]
homepage = "https://intecture.io"
repository = "https://github.com/intecture/agent"
build = "build.rs"

[dev-dependencies]

tempdir = "0.3.*"

[dependencies]

czmq = { git = "https://github.com/petehayes102/rust-czmq.git", tag = "0.0.5" }
intecture-auth = { git = "https://github.com/intecture/auth.git", tag = "0.0.2" }
rustc-serialize = "0.3.*"
zdaemon = { git = "https://github.com/betweenlines/zdaemon.git", tag = "0.0.1" }
zfilexfer = { git = "https://github.com/betweenlines/zfilexfer.git", tag = "0.0.1" }

[dependencies.intecture-api]

version = "0.2.1"
git = "https://github.com/intecture/api.git"
default-features = false
features = ["local-run"]

[[bin]]

name = "inagent"
