[package]

name = "intecture-agent"
version = "0.3.0"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "Agent component for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "agent"]
homepage = "https://intecture.io"
repository = "https://github.com/intecture/agent"

[dev-dependencies]

tempdir = "0.3"

[dependencies]

chan = "0.1"
chan-signal = "0.1"
czmq = "0.1"
intecture-auth = "0.1"
rustc-serialize = "0.3"
serde = "0.8"
serde_json = "0.8"
zdaemon = "0.0.2"
zfilexfer = "0.0.2"

[dependencies.intecture-api]

version = "0.3"
default-features = false
features = ["local-run"]

[[bin]]

name = "inagent"
